home screen completed

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
         android:allowBackup="false"
         android:fullBackupOnly="false"
         android:icon="@mipmap/ic_launcher"
-        android:label="eShop"
+        android:label="Suvidha"
         android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true">
         <activity
