--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ dependencies:
   google_fonts: ^4.0.4
   font_awesome_flutter: ^10.7.0
   carousel_slider: ^5.0.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
