--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   carousel_slider: ^5.0.0
   url_launcher: ^6.3.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
