--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,6 +76,9 @@ android {
             //signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            signingConfig signingConfigs.debug
+        }
     }
 }
 
